# rustdemo

./: Cargo.toml  Dockerfile  Dockerfile-arm64  Dockerfile-arm64-cacher  Dockerfile-arm64-cacher2  Dockerfile-arm64-cacher3  build-and-deploy.sh  db_chart.drawio
k8s/: cassandra-deployment.yml  cassandra-stateset-dep.yml  rustdemo-deployment.yml  scylla-stateset-dep.yml
src/: cassie.rs  db_ops.rs  main.rs  scylla_db_ops.rs  scylla_store_db_ops.rs  scylla_user_db_ops.rs  user_info.rs
src/data/: db.rs  mod.rs
src/data/db/: db_menu_item.rs  db_menu_option.rs  db_user_info.rs
src/data/request/: mod.rs  store.rs
src/data/request/auth/: login_request.rs
src/data/request/menu/: create_menu_option_request.rs  create_menu_request.rs
src/data/request/store/: create_store_request.rs  create_store_user_request.rs
src/data/request/user/: create_user_request.rs
src/data/response/: create_user_response.rs  login_response.rs
src/data/response/menu/: get_menu_response.rs
src/data/response/store/: get_store_response.rs
src/db/: common.rs  mod.rs  store.rs  user.rs
src/db/auth/: scylla_auth_db_ops.rs
src/db/common/: scylla_db_ops.rs
src/db/menu/: scylla_menu_db_ops.rs
src/db/old/: db_ops.rs
src/db/store/: scylla_store_db_ops.rs
src/db/user/: scylla_activate_user_db_ops.rs  scylla_user_db_ops.rs
src/handlers/: activation_handler.rs  mod.rs  store_handler.rs  store_user_handler.rs  user_handler.rs
