[package]
name = "rustdemo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.2", features = ["serde", "v4"] }
chrono = {version="0.4.19",features = ["serde"]}
tokio = { version = "1.10.1", features = ["full"] }
tokio-rustls = { version = "0.22", optional = true }
futures = "0.3.17"
serde="1.0.130"
serde_json = "1.0.67"
actix-web = "4.0.0-beta"
scylla="0.2.1"
cdrs-tokio = "5.0.0"
cdrs-tokio-helpers-derive = "3.1.0"
maplit = "1.0.2"